# stm32_rest_api

./: CMakeLists.txt  README.md  http.h
api/: HttpTypes.hpp  Router.cpp  Router.hpp  http_types.hpp  rest_api.cpp  rest_api.hpp  router.cpp  router.hpp
endpoints/: IController.hpp  StatusController.cpp  StatusController.hpp
http/: HttpServer.hpp  http_server.cpp  http_server.hpp
